@@ -2,34 +2,36 @@ package ru.yandex.practicum.filmorate.storage.mpa;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.jdbc.core.RowMapper;
 import org.springframework.stereotype.Repository;
-import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.model.Mpa;
+import ru.yandex.practicum.filmorate.storage.MpaStorage;
 
 import java.util.List;
+import java.util.Optional;
 
 @Repository
 @RequiredArgsConstructor
-public class MpaDbStorage {
-
+public class MpaDbStorage implements MpaStorage {
     private final JdbcTemplate jdbcTemplate;
 
-    public List<Mpa> getAll() {
-        return jdbcTemplate.query(
-                "SELECT id, name FROM mpa_ratings ORDER BY id",
-                (rs, rn) -> new Mpa(rs.getInt("id"), rs.getString("name"))
-        );
+    private final RowMapper<Mpa> mpaMapper = (rs, rowNum) -> {
+        Mpa mpa = new Mpa();
+        mpa.setId(rs.getInt("id"));
+        mpa.setName(rs.getString("name"));
+        return mpa;
+    };
+
+    @Override
+    public List<Mpa> findAll() {
+        String sql = "SELECT * FROM mpa_ratings ORDER BY id";
+        return jdbcTemplate.query(sql, mpaMapper);
     }
 
-    public Mpa getById(Integer id) {
-        List<Mpa> ratings = jdbcTemplate.query(
-                "SELECT id, name FROM mpa_ratings WHERE id = ?",
-                (rs, rn) -> new Mpa(rs.getInt("id"), rs.getString("name")),
-                id
-        );
-        if (ratings.isEmpty()) {
-            throw new NotFoundException("Рейтинг с id " + id + " не найден");
-        }
-        return ratings.getFirst();
+    @Override
+    public Optional<Mpa> findById(Integer id) {
+        String sql = "SELECT * FROM mpa_ratings WHERE id = ?";
+        List<Mpa> mpas = jdbcTemplate.query(sql, mpaMapper, id);
+        return mpas.isEmpty() ? Optional.empty() : Optional.of(mpas.get(0));
     }
 }
